@@ -125,6 +125,18 @@
 			<trans-unit id="childrenProperyControlColumnsForDeleteSetButNotControlColumnsForUpdate" xml:space="preserve">
 				<source>The "controlColumnsForDelete" information of the "children" property is set but not the "controlColumnsForUpdate" property. This means that all child records will be deleted unless the "delete" operation has been disabled.</source>
 			</trans-unit>
+			<trans-unit id="substructureFieldsPropertyNotAnArrayForField" xml:space="preserve">
+				<source>The "substructureFields" property for field %s must be an array.</source>
+			</trans-unit>
+			<trans-unit id="substructureFieldsPropertyWithEmptyConfigurationForArrayTypeData" xml:space="preserve">
+				<source>The "substructureFields" configuration for field %s is empty. This is not allowed for array-type data.</source>
+			</trans-unit>
+			<trans-unit id="substructureFieldsPropertyWithWrongConfigurationForArrayTypeData" xml:space="preserve">
+				<source>The "substructureFields" configuration contains invalid properties (%1$s) for array-type data. Only 2$%s are allowed.</source>
+			</trans-unit>
+			<trans-unit id="substructureFieldsPropertyWithWrongConfigurationForXmlTypeData" xml:space="preserve">
+				<source>The "substructureFields" configuration contains invalid properties (%1$s) for XML-type data. Only 2$%s are allowed (as well as being empty).</source>
+			</trans-unit>
 			<trans-unit id="mmPropertyDeprecated" xml:space="preserve">
 				<source>The MM property is deprecated. Do not use it anymore. Switch to "multipleRows" or "children" instead.</source>
 			</trans-unit>
